owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_let_statement-2.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_stmt(\"let x = 1 + 1;\")"
---
Stmt {
    kind: Let {
        iden: "x",
        initializer: Expr {
            kind: BinaryExpr {
                lhs: Expr {
                    kind: Literal(
                        1,
                    ),
                    span: Span {
                        lo: BytePos(
                            8,
                        ),
                        hi: BytePos(
                            10,
                        ),
                    },
                },
                rhs: Expr {
                    kind: Literal(
                        1,
                    ),
                    span: Span {
                        lo: BytePos(
                            12,
                        ),
                        hi: BytePos(
                            13,
                        ),
                    },
                },
                op_type: OpPlus,
            },
            span: Span {
                lo: BytePos(
                    8,
                ),
                hi: BytePos(
                    13,
                ),
            },
        },
    },
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            13,
        ),
    },
}
