owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_let_statement-3.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_stmt(\"let x = func(2);\")"
---
Stmt {
    kind: Let {
        iden: "x",
        initializer: Expr {
            kind: FuncCall {
                callee: "func",
                args: [
                    Expr {
                        kind: Literal(
                            2,
                        ),
                        span: Span {
                            lo: BytePos(
                                13,
                            ),
                            hi: BytePos(
                                14,
                            ),
                        },
                    },
                ],
            },
            span: Span {
                lo: BytePos(
                    8,
                ),
                hi: BytePos(
                    15,
                ),
            },
        },
    },
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            15,
        ),
    },
}
