owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_operator_precedence.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_expr(\"1 + 2 * 3\")"
---
Expr {
    kind: BinaryExpr {
        lhs: Expr {
            kind: Literal(
                1,
            ),
            span: Span {
                lo: BytePos(
                    0,
                ),
                hi: BytePos(
                    2,
                ),
            },
        },
        rhs: Expr {
            kind: BinaryExpr {
                lhs: Expr {
                    kind: Literal(
                        2,
                    ),
                    span: Span {
                        lo: BytePos(
                            4,
                        ),
                        hi: BytePos(
                            6,
                        ),
                    },
                },
                rhs: Expr {
                    kind: Literal(
                        3,
                    ),
                    span: Span {
                        lo: BytePos(
                            8,
                        ),
                        hi: BytePos(
                            9,
                        ),
                    },
                },
                op_type: OpAsterisk,
            },
            span: Span {
                lo: BytePos(
                    4,
                ),
                hi: BytePos(
                    9,
                ),
            },
        },
        op_type: OpPlus,
    },
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            9,
        ),
    },
}
