owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_unary_operator-4.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_expr(\"1 + (-2)\")"
---
Expr {
    kind: BinaryExpr {
        lhs: Expr {
            kind: Literal(
                1,
            ),
            span: Span {
                lo: BytePos(
                    0,
                ),
                hi: BytePos(
                    2,
                ),
            },
        },
        rhs: Expr {
            kind: BinaryExpr {
                lhs: Expr {
                    kind: Literal(
                        0,
                    ),
                    span: Span {
                        lo: BytePos(
                            5,
                        ),
                        hi: BytePos(
                            5,
                        ),
                    },
                },
                rhs: Expr {
                    kind: Literal(
                        2,
                    ),
                    span: Span {
                        lo: BytePos(
                            6,
                        ),
                        hi: BytePos(
                            7,
                        ),
                    },
                },
                op_type: OpMinus,
            },
            span: Span {
                lo: BytePos(
                    5,
                ),
                hi: BytePos(
                    7,
                ),
            },
        },
        op_type: OpPlus,
    },
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            7,
        ),
    },
}
