owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_unary_operator.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_expr(\"+1\")"
---
Expr {
    kind: Literal(
        1,
    ),
    span: Span {
        lo: BytePos(
            1,
        ),
        hi: BytePos(
            2,
        ),
    },
}
