owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_while_statement-2.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_stmt(\"while x < 10 { }\")"
---
Stmt {
    kind: While {
        condition: Expr {
            kind: BinaryExpr {
                lhs: Expr {
                    kind: Identifier(
                        "x",
                    ),
                    span: Span {
                        lo: BytePos(
                            6,
                        ),
                        hi: BytePos(
                            8,
                        ),
                    },
                },
                rhs: Expr {
                    kind: Literal(
                        10,
                    ),
                    span: Span {
                        lo: BytePos(
                            10,
                        ),
                        hi: BytePos(
                            13,
                        ),
                    },
                },
                op_type: OpLessThan,
            },
            span: Span {
                lo: BytePos(
                    6,
                ),
                hi: BytePos(
                    13,
                ),
            },
        },
        body: Block {
            stmts: [],
        },
    },
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            16,
        ),
    },
}
